fix: Noty Dialog Overflow

--- a/front-server/src/main/resources/static/css/community/community.css
+++ b/front-server/src/main/resources/static/css/community/community.css
@@ -460,6 +460,8 @@ label {
 
 #noty-dialog {
     width: 100%;
+    max-height: 30vh;
+    overflow: hidden scroll;
 }
 
 .sidebar__expand {
